refactor: cleanup codebase + minor ui fixes